Updated Home Page copy, Brand Page name in Navbar

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,9 +28,9 @@
             </ul>
             <ul class="menu">
                 <li><a href="/#meeting-section">Meetings</a></li>
-                <li><a href="/#join-section">Join the Comunity</a></li>
+                <li><a href="/#join-section">Join the Community</a></li>
                 <li><a href="/#family-section">Friends and Family</a></li>
-                <li><a href="/brand">Use of Logo</a></li>
+                <li><a href="/brand">Brand</a></li>
             </ul>
         </nav>
         <nav class="mobile hamburger-menu">
@@ -43,9 +43,9 @@
             <ul class="mobile mobile-full-menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/#meeting-section">Meetings</a></li>
-                <li><a href="/#join-section">Join the Comunity</a></li>
+                <li><a href="/#join-section">Join the Community</a></li>
                 <li><a href="/#family-section">Friends and Family</a></li>
-                <li><a href="/brand">Use of Logo</a></li>
+                <li><a href="/brand">Brand</a></li>
             </ul>
         </nav>
         <a href="/"><img class="top-logo" src="assets/img/logo.svg" alt="logo"></a>
@@ -72,7 +72,7 @@
     <section class="is-large" id="family-section">
         <div class="container is-centered">
             <h2 class="header-title">Friends and Family</h1>
-            <h3 class="header-subtitle">Sarnia Tech Community is a friend and follower of SLLUG (Sarnia Lambton Linux Users Group) Go check out SLLUG’s Website.
+            <h3 class="header-subtitle">STC is a friend (parent? cousin?) of the Sarnia Lambton Linux Users Group.
             </h3>
             <a href="http://www.sllug.ca/" class="button header-button3">Go to SLLUG</a>
         </div>
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="content has-text-centered">
                 <p>
-                    <span style="display: none">Privacy    |    Terms of Use    |    Client Rights and Responsibility.</span>© 2018 copyright, All rights reserved
+                    <span style="display: none">Privacy    |    Terms of Use    |    Client Rights and Responsibility.</span>© 2019 Copyright, All Rights Reserved
                 </p>
             </div>
         </div>
