--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,9 +36,9 @@
             </ul>
             <ul class="menu">
                 <li><a href="/#meeting-section">Meetings</a></li>
-                <li><a href="/#join-section">Join the Comunity</a></li>
+                <li><a href="/#join-section">Join the Community</a></li>
                 <li><a href="/#family-section">Friends and Family</a></li>
-                <li><a href="/brand">Use of Logo</a></li>
+                <li><a href="/brand">Brand</a></li>
             </ul>
         </nav>
         <nav class="mobile hamburger-menu">
@@ -51,9 +51,9 @@
             <ul class="mobile mobile-full-menu">
                 <li><a href="/">Home</a></li>
                 <li><a href="/#meeting-section">Meetings</a></li>
-                <li><a href="/#join-section">Join the Comunity</a></li>
+                <li><a href="/#join-section">Join the Community</a></li>
                 <li><a href="/#family-section">Friends and Family</a></li>
-                <li><a href="/brand">Use of Logo</a></li>
+                <li><a href="/brand">Brand</a></li>
             </ul>
         </nav>
         <a href="/"><img class="top-logo" src="assets/img/logo.svg" alt="logo"></a>
@@ -69,8 +69,8 @@
             </div>
             <div class="columns">
                 <div class="column is-8">
-                    <h1 class="header-title">Helping Sarnia's Tech Community</h1>
-                    <h3 class="header-subtitle dont-squash-me">Sarnia-Lambton is a thriving, innovative community that has a diverse population and attracts outside investment and talent.</h3>
+                    <h1 class="header-title">Sarnia's Tech Community</h1>
+                    <h3 class="header-subtitle dont-squash-me">STC is a grassroots group of tech professionals, enthusiasts, business owners and students.</h3>
                     <div class="columns button-box is-desktop">
                         <div class="column is-5">
                             <a href="/member" class="button header-button1">
@@ -96,16 +96,14 @@
                       <!-- leave empty. -->
                     </div>
                     <div class="column is-two-third" style="text-align: left;">
-                        <h2 class="header-title">Networking Events</h1>
-                        <h3 class="header-subtitle ">We get together once in a while to talk about tech,
-                        entrepreneurship and business. We meet up at the Story
-                        which is located in Downtown Sarnia. For more information on upcoming events, please visit our Facebook page.
+                        <h2 class="header-title">Events</h1>
+                        <h3 class="header-subtitle ">We meet every third Wednesday at theStory in Downtown Sarnia.
                         </h3>
                         <div class="columns button-box is-desktop">
                             <div class="column is-10-tablet is-5">
                                <a href="https://www.google.ca/maps/place/theStory/@42.9729758,-82.4094274,17z/data=!4m5!3m4!1s0x88259cc31bde2e8b:0x8ed04c1348104121!8m2!3d42.9729758!4d-82.4072387" class="button header-button2">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"/></svg>
-                               The Story Location</a>
+                               theStory</a>
                             </div>
                         </div>
                     </div>
@@ -128,14 +126,9 @@
                         <!-- <a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch2.png" alt="twitter"></a> -->
                         <a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch3.png" alt="facebook"></a>
                     </div>
-
-                    <h3 class="header-subtitle">The best place to see upcoming events is by joining our <a href="https://www.facebook.com/groups/SarniaTech/"><span class="blue">Facebook</span></a> Group.
-                     If you would like to join the conversation then check out our <a href="https://sarnia.slack.com/">Slack Group</a>.
-                     To get a slack invite and join our mailing list sign up to <a href="/member">become a Sarnia Tech Community Member</a>.
-                     If you would only like to receive emails about major events then <a href="/subscriber">become a Subscriber</a>.
-                     We also have a <a href="https://goo.gl/4vA69g">Google Drive</a> where you can check out some of our collaboration docs.
-                     PS We take privacy very seriously. We will only use the information you provide to give you information about the Sarnia Tech Community.
-                     PPS You can unsubscribe or change your email preferences at any time.</h3>
+                    <h3 class="header-subtitle">View <a href="https://www.facebook.com/groups/SarniaTech/"><span class="blue">Upcoming Events</span></a></h3>
+                     <h3 class="header-subtitle">Join the Slack discussion and join our mailing list: <a href="/member">become a Member</a>.</h3>
+                     <h3 class="header-subtitle">Or, receive only emails about important events: <a href="/subscriber">become a Subscriber</a>.</h3>
                      <div class="columns button-box is-desktop">
                          <div class="column is-4">
                             <a href="https://www.facebook.com/groups/SarniaTech/" class="button header-button2">
@@ -166,7 +159,7 @@
     <section class="is-large" id="family-section">
         <div class="container is-centered">
             <h2 class="header-title slug-color">Friends and Family</h1>
-            <h3 class="header-subtitle">Sarnia Tech Community is a friend and follower of SLLUG (Sarnia Lambton Linux Users Group) Go check out SLLUG’s Website.
+            <h3 class="header-subtitle">STC is a friend (parent? cousin?) of the Sarnia Lambton Linux Users Group.
             </h3>
             <div class="columns button-box is-tablet is-centered">
                 <div class="column is-3"><a href="http://www.sllug.ca/" class="button header-button3">Go to SLLUG</a></div>
@@ -181,7 +174,7 @@
         <div class="container">
             <div class="content has-text-centered">
                 <p>
-                    <span style="display: none">Privacy    |    Terms of Use    |    Client Rights and Responsibility.</span>© 2018 copyright, All rights reserved
+                    <span style="display: none">Privacy    |    Terms of Use    |    Client Rights and Responsibility.</span>© 2019 Copyright, All Rights Reserved
                 </p>
             </div>
         </div>
